Adição de css globar com variáveis e font-size base para .em

--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -1,9 +1,8 @@
 .customButton{
-    background-color: #254A5B;
+    background-color: var(--gunmetal);
     border-radius: 8px;
-    border-color: #C9C9C9;
+    border-color: var(--branco);
     height: 65px;
     width: 190px;
-    color: white;
-    font-family: "DM Sans"
+    color: var(--branco);
 }
