--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -1,3 +1,10 @@
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+}
+
 .campoEmail{
   display: flex;
   flex-direction: column;
@@ -27,6 +34,7 @@ input{
   height: 47px;
   border-radius: 8px;
   color: var(--branco);
+  padding-left: 10px;
 }
 
 .containerBotao{
