--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -1,30 +1,27 @@
-body {
+.login  {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
-}
+  align-items: center;
+  gap: 32px;
+ }
 
-.campoEmail{
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  
-}
-
-.campoSenha{
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  
-}
-
-.infos{
+.login > div{
   display: flex;
   flex-direction: column;
   
   width: 262PX;
   gap: 24px;
+}
+
+.login h1{
+  text-shadow: var(--sombra-vermelha)
+}
+
+.campo {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 input{
@@ -35,6 +32,7 @@ input{
   border-radius: 8px;
   color: var(--branco);
   padding-left: 10px;
+  box-shadow: var(--sombra-interna);
 }
 
 .containerBotao{
