Tela cadastro finalizada

--- a/src/components/NavBar/navBar.module.css
+++ b/src/components/NavBar/navBar.module.css
@@ -1,6 +1,5 @@
 .NavBar{
     display: flex;
-    justify-content: space-around;
     align-items: center;
     width: 375px;
     height: 80px;
@@ -9,5 +8,8 @@
 }
 
 .Title{
-    font-size: 1em;
+    width: 80%;
+    text-align: center;
+    font-size: 1.3em;
+    font-family: "Bebas Neue";
 }
