--- a/src/components/VectorIcon/vectorIcon.module.css
+++ b/src/components/VectorIcon/vectorIcon.module.css
@@ -1,13 +1,12 @@
+.container{
+    width: 10%;
+    padding-left: 20px;
+}
 .root {
     width: 35.9097px;
     height: 35px;
-}
-.vector {
-    flex: 1;
-    align-self: stretch;
-    overflow: visible;
+    cursor: pointer;
 }
 .icon {
-    width: 100%;
-    height: 100%;
+    fill: var(--branco);
 }
