--- a/src/globals.css
+++ b/src/globals.css
@@ -6,12 +6,14 @@ O :root define variáveis em CSS. As usamos para mudar um valor em todo o site
 alterando-o apenas aqui, assim como com as variáveis do Figma!!!
 */
 :root {
+    /* Paleta de cores */
     --branco: #F5FBEF;
     --preto: #0A0908;
     --gunmetal: #22333B;
     --carvao: #254A5B;
     --cinza-transparate: #C9C9C9;
     --vermelho: #CC334E;
+    --azul-claro: #65B5DA;
     --gradiente: linear-gradient(
         to right,
         var(--gunmetal),
@@ -19,8 +21,16 @@ alterando-o apenas aqui, assim como com as variáveis do Figma!!!
         var(--gunmetal)
     );
 
+    /* Bordas */
+    --borda-branca:  1px solid var(--branco);
+    --borda-fina-branca: 0.5px 8px solid var(--branco);
+
+    /*  Sombras */
+    /* IN = Interna; EX = Com espaçamento adicional, para acomodar bordas*/
     --sombra-vermelha: 0 0 5px var(--vermelho);
-    --sombra-interna: 0 0 15px 3px var(--preto) inset;
+    --sombra-in-escura: 0 0 15px 3px var(--preto) inset;
+    --sombra-in-clara: 1px 1px 10px 3px var(--azul-claro) inset;
+    --sombra-ex-vermelha: 3px 3px 3px 1px var(--vermelho);
 }
 
 /* Tamanho de um celular, definido de forma temporária */
@@ -47,10 +57,11 @@ body{
 
 *{
     color: var(--branco);
-    font-family: "DM Sans";
+    font-family: "DM Sans", sans-serif;
     margin: 0;
     padding: 0;
-    font-size: 18px;
+    font-size: 24px;
+    box-sizing: border-box;
     /*
     O "em" representa n vezes o font-size base (definido acima)
     É usado para caso desejemos aumentar o tamanho da fonte, mudamos
