--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -1,27 +1,20 @@
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 812px;
-  width: 375px;
-}
-
 .login  {
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 32px;
+  gap: 56px;
+  padding: 8px 0;
 }
-
-.login > div{
+.login > form{
   display: flex;
   flex-direction: column;
-  width: 262px;
+  align-items: center;
+  width: 100%;
   gap: 24px;
 }
-
 .login h1{
   text-shadow: var(--sombra-vermelha)
 }
@@ -30,10 +23,4 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-}
-
-.containerBotao{
-  width: 100%;
-  display: flex;
-  justify-content: center;
 }
