275 Variáveis para fontes + limpeza de código.

--- a/src/components/NavBar/navBar.module.css
+++ b/src/components/NavBar/navBar.module.css
@@ -11,5 +11,5 @@
     width: 80%;
     text-align: center;
     font-size: 1.3em;
-    font-family: "Bebas Neue";
+    font-family: var(--fonte-destaque);
 }
