--- a/src/components/Toast/toast.module.css
+++ b/src/components/Toast/toast.module.css
@@ -1,19 +1,34 @@
-.Toast{
+.Toast,.ToastInvalido, .ToastErro{
     background-color: var(--verde);
-    height: 94px;
-    width: 334px;
+    height: auto;
+    width: 330px;
     border-radius: 10px;
     flex-direction: row;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 16px;
+    font-size: 1.3em;
 }
-.Toast span{
+.Toast span, .ToastInvalido span{
     color: var(--gunmetal) !important;
 }
 .icone path{
     width: 30px;
     height: 30px;
     color: var(--gunmetal) !important;
+}
+.ToastInvalido{
+    background-color: var(--amarelo);
+}
+.ToastErro{
+    background-color: var(--laranja);
+}
+.ToastErro span{
+    color: var(--branco) !important;
+}
+.ToastErro .icone path{
+    width: 30px;
+    height: 30px;
+    color: var(--branco) !important;
 }
