--- a/src/components/itemMenu/itemMenu.module.css
+++ b/src/components/itemMenu/itemMenu.module.css
@@ -8,6 +8,7 @@
     align-items: center;
     border-bottom: 1px solid var(--branco);
     padding: 16px;
+    border-right: 0.5px solid var(--branco);
 }
 .icon{
     width: 25px;
