Refazer componentes: Feito

--- a/src/components/NavBar/navBar.module.css
+++ b/src/components/NavBar/navBar.module.css
@@ -4,7 +4,7 @@
     width: 375px;
     height: 80px;
     background-color: var(--preto);
-    color: var(--branco);
+    color: var(--white);
 }
 
 .Title{
