--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -4,7 +4,7 @@ button{
     border-radius: 8px;
     height: 65px;
     width: 190px;
-    color: var(--branco);
+    color: var(--white);
     box-shadow: var(--sombra-ex-vermelha);
     font-weight: 600;
 }
