--- a/src/components/ItemList/ListItem.module.css
+++ b/src/components/ItemList/ListItem.module.css
@@ -1,4 +1,4 @@
-.itemLista{
+.itemList{
     background: var(--gunmetal);
     display: flex;
     flex-direction: row;
@@ -7,7 +7,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 16px;
-    border: 1px solid var(--branco);
+    border: 1px solid var(--white);
     border-radius: 4px;
 }
 
@@ -15,7 +15,7 @@
     width: 65px;
     height: 65px;
     border-radius: 100%;
-    border: 1px solid var(--branco);
+    border: 1px solid var(--white);
 }
 
 .text {
@@ -36,7 +36,7 @@
 .text {
     font-size: 23px;
 }
-.icone{
+.icon{
     height: 35px;
     width: 35px;
 }
