--- a/src/components/OperationLog/OperationLog.module.css
+++ b/src/components/OperationLog/OperationLog.module.css
@@ -7,7 +7,7 @@
     justify-content: flex-start;
     align-items: center;
     padding: 16px;
-    border: 1px solid var(--branco);
+    border: 1px solid var(--white);
     border-radius: 4px;
 }
 
@@ -15,7 +15,7 @@
     width: 65px;
     height: 65px;
     border-radius: 100%;
-    border: 1px solid var(--branco);
+    border: 1px solid var(--white);
 }
 
 .text {
