--- a/src/pages/Cadastro/cadastro.module.css
+++ b/src/pages/Cadastro/cadastro.module.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 1px solid var(--branco)
+    border-top: 1px solid var(--white)
 }
 
 .botao > button {
@@ -36,7 +36,7 @@
     height: 65px;
     background: var(--carvao);
     border-radius: 8px;
-    color: var(--branco);
+    color: var(--white);
     font-size: 16px;
     font-weight: 700;
     border: none;
