--- a/src/components/MenuSuperior/menuSuperior.module.css
+++ b/src/components/MenuSuperior/menuSuperior.module.css
@@ -28,6 +28,7 @@
   }
   .icon {
     font-size: 33px;
+    /* box-shadow: 0 0 5px 2px rgba(255, 0, 0, 0.5);   */
   }
   @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
   .title {
