Criação do IconTextInput.

--- a/src/globals.css
+++ b/src/globals.css
@@ -16,7 +16,7 @@ alterando-o apenas aqui, assim como com as variáveis do Figma!!!
     --preto: #0A0908;
     --gunmetal: #22333B;
     --carvao: #254A5B;
-    --cinza-transparate: #C9C9C9;
+    --cinza-transparente: #C9C9C9;
     --vermelho: #CC334E;
     --azul-claro: #65B5DA;
     --green:#2DD36F;
