Subindo correção faltante.

--- a/src/components/IconTextInput/iconTextInput.module.css
+++ b/src/components/IconTextInput/iconTextInput.module.css
@@ -31,7 +31,7 @@
     border: none;
     width: 100%;
 }
-.textInput .icon > pathIc{
+.textInput .icon > path{
     fill: var(--cinza-transparente);
 }
 
