--- a/src/components/MenuPrincipal/menuLateral.module.css
+++ b/src/components/MenuPrincipal/menuLateral.module.css
@@ -1,20 +1,36 @@
+.divSideBar{
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(255, 255, 255, 0.247);
+    height: 100%;
+    width: 500px;
+    position: fixed;
+    top: 0;
+}
+
 .sidebar {
-    width: 250px;
+    width: 50%;
     background-color: var(--carvao);
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     color: var(--branco);
-    border-right: 0.5px solid var(--branco);
-
-    position: fixed;
-    top: 0;
+    /* border-right: 0.5px solid var(--white); */
+/* 
+    
     left: 0;
-    z-index: 1000;
+    z-index: 1000; */
+}
+
+.sideSideBar{
+    /* background-color: blueviolet; */
+    width: 50%;
+    height: 100%;
 }
 
 .sidebarHeader {
+    display: flex;
     width: 100%;
     height: 12%;
     justify-content: center;
@@ -23,7 +39,7 @@
     font-family: var(--fonte-artistica);
     font-size: 18px;
     font-weight: bold;
-    border-bottom: 2px solid var(--branco); /* Uma linha de destaque inferior, por exemplo */
+    border-bottom: 2px solid var(--white); /* Uma linha de destaque inferior, por exemplo */
 }
 
 .sidebarMenu {
@@ -31,6 +47,7 @@
 }
 
 .sidebarFooter {
+    display: flex;
     width: 100%;
     justify-content: space-around;
     padding: 20px;
@@ -42,13 +59,16 @@
 }
 
 .userImage {
+    display: flex;
     width: 65px;
     height: 65px;
     border-radius: 100%;
-    border: 1px solid var(--branco);
+    border: 1px solid var(--white);
 }
 
 .userInfo {
+    display: flex;
+    flex-direction: column;
     text-align: start;
     font-family: var(--fonte-destaque);
 }
@@ -63,9 +83,9 @@
 .logoutButton {
     width: 100%;
     background-color: transparent;
-    color: var(--vermelho);
+    /* color: (--sombra-vermelha); */
     border: none;
-    font-size: 20px;
+    font-size: 28px;
     cursor: pointer;
     padding: 0;
     text-decoration: underline;
