--- a/src/components/MenuSuperior/menuSuperior.module.css
+++ b/src/components/MenuSuperior/menuSuperior.module.css
@@ -3,36 +3,36 @@
     flex-direction: row;
     background-color: black;
     color: white;
-    height: 53px;
-    width: 360px;
-    border-bottom: 2px solid #f0a0a0; /* Uma linha de destaque inferior, por exemplo */
+    height: 60px;
+    width: 375px;
+    border-bottom: 2px solid #f0a0a0;
+    margin-bottom: 5px;
   }
   
   .iconDiv{
+    display: flex;
     height: 100%;
     width: 20%;
-    /* background-color: red; */
     align-items: center;
     justify-content: center;
   }
 
   .titleDiv{
+    display: flex;
     height: 100%;
     width: 80%;
     flex-direction: row;
-    /* background-color: blue; */
     justify-content: center;
     align-items: center;
-    padding-right: 20%;
+    padding-right: 15%;
     padding-top: 5px;
   }
   .icon {
-    font-size: 33px;
+    font-size: 1.3em;
     /* box-shadow: 0 0 5px 2px rgba(255, 0, 0, 0.5);   */
   }
-  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
   .title {
-    font-size: 24px;
-    font-family: 'Bebas Neue';
+    font-size: 1.3em;
+    font-family: var(--fonte-destaque);
     /* padding-left: 10%; */
   }
