--- a/src/components/itemProduto/itemProduto.module.css
+++ b/src/components/itemProduto/itemProduto.module.css
@@ -1,58 +1,80 @@
 .itemCard {
     display: flex;              
-    background-color: #ffc107;
-    border: 2px solid #ccc;
-    /* padding: 10px; */
-    /* margin: 10px; */
-    height: 67px;
-    width: 345px;
+    /* background-color: #ffc107; */
+    border: 2px solid var(--white);
+    height: 75px;
+    width: 360px;
     border-radius: 8px;
   }
-
-  .moldura{
-    align-items: center;
-    justify-content: center;
-    background-color: #dc3545;
-    height: 100%;
-    width: 80px;
- }
   
+ .textProductItem{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-family: var(--fonte-corpo);
+  /* background-color: #ffc107; */
+  width: 60%;
+  height: 100%;
+ }
+
+ .text1{
+    font-size: 1em;
+    font-weight: 200px;
+ }
+
+ .text2{
+  font-size: 0.8em;
+ }
+
+ .moldura{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: #dc3545; */
+  height: 100%;
+  width: 23%;
+}
   .image{
     border-radius: 8px;
-    border: 2px solid #000;
-    height: 50px;
-    width: 50px;
-  }
-  .checked {
-    /* background-color: #ffc107; */
-    border-color: lightblue;
-    background-color: var(--carvao);
-    /* width: 345px;
-    height: 67px; */
+    border: 2px solid var(--white);
+    height: 85%;
+    width: 80%;
   }
   
   .itemInfo {
-    background-color: aqua;
+    display: flex;
+    /* background-color: aqua; */
     flex-direction: row;
     flex: 1;
     align-items: center;
     justify-content: center;
-    /* justify-content: space-around; */
+    justify-content: space-evenly;
     width: 100%;
-    height: 75px;
-    /* padding: 0 10px; */
+    height: 100%;
   }
   
   .itemActions {
     display: flex;
     align-items: center;
   }
-  
+  .checked {
+    /* background-color: #ffc107; */
+    border-color: var(--white);
+    background-color: var(--carvao);
+  }
+  .divCheckbox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: greenyellow; */
+    height: 100%;
+    width: 13%;
+  }
   .checkbox {
+    display: flex;
     width: 30px;
-    height: 25px;
-    border: 2px solid #000;
-    /* display: flex; */
+    height: 30px;
+    border: 2px solid var(--white);
     align-items: center;
     justify-content: center;
     cursor: pointer;
