--- a/src/components/MenuSuperior/menuSuperior.module.css
+++ b/src/components/MenuSuperior/menuSuperior.module.css
@@ -29,9 +29,11 @@
   }
   .icon {
     font-size: 1.5em;
+    /* box-shadow: 0 0 5px 2px rgba(255, 0, 0, 0.5);   */
   }
 
   .title {
+    display: flex;
     font-size: 1.3em;
     font-family: var(--fonte-destaque);
   }
