--- a/src/components/MenuSuperior/menuSuperior.module.css
+++ b/src/components/MenuSuperior/menuSuperior.module.css
@@ -29,11 +29,14 @@
   }
   .icon {
     font-size: 1.5em;
-    /* box-shadow: 0 0 5px 2px rgba(255, 0, 0, 0.5);   */
+    filter: drop-shadow(0 4px 3px rgba(255, 0.7, 0.7, 0.7));
+    /* box-shadow: var(--sombra-vermelha-icone); */
   }
 
   .title {
     display: flex;
     font-size: 1.3em;
+    width: 100%;
+    /* text-overflow: ellipsis; */
     font-family: var(--fonte-destaque);
   }
