Switch - tamanho fonte e font-family ajustado

--- a/src/components/Switch/switch.module.css
+++ b/src/components/Switch/switch.module.css
@@ -43,6 +43,7 @@
   .switchLabel {
     margin-left: 8px;
     color: var(--white);
-    font-family: 'DM Sans', cursive, sans-serif; /* Estilo da fonte */
+    font-size: 1em;
+    font-family: var(--fonte-corpo);
   }
   
