--- a/src/components/IconButton/IconButton.module.css
+++ b/src/components/IconButton/IconButton.module.css
@@ -1,6 +1,7 @@
 .iconButton{
-    width: 150px;
-    height: 120px;
+    min-width: 150px;
+    min-height: 120px;
+    height: fit-content;
     border-radius: 16px;
     background-color: var(--gunmetal);
     box-shadow: var(--sombra-branca);
