--- a/src/pages/Cadastro/cadastro.module.css
+++ b/src/pages/Cadastro/cadastro.module.css
@@ -1,47 +1,51 @@
-.form{
-    height: 563px;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+
+.header{
     width: 100%;
+    height: 50px;
+    background-color: black;
+}
+
+.divPrincipal{
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+    gap: 24px;
+}
+
+.h1{
+    font-family: 'DM Sans', sans-serif;;
+    font-size: 24px;
+}
+
+.divAdministrador{
+    display: flex;
+    gap: 16px;
+}
+
+.divTexInput{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 .campo {
     display: flex;
     flex-direction: column;
-    width: 95%;
+    width: 100%;
     gap: 8px;
 }
-.campoCheckbox {
-    display: flex;
-    flex-direction: row;
-    width: 95%;
-    justify-content: space-evenly;
-    align-items: center;
+
+
+
+input[type="file"] {
+    font-size: 12px; /* Altere o valor para o tamanho de fonte desejado */
 }
 
-.botao {
+.divButton{
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 169px;
-    display: flex;
-    justify-content: center;
     align-items: center;
-    border-top: 1px solid var(--white)
-}
-
-.botao > button {
-    width: 160px;
-    height: 65px;
-    background: var(--carvao);
-    border-radius: 8px;
-    color: var(--white);
-    font-size: 16px;
-    font-weight: 700;
-    border: none;
-}
-
-.botao > button:hover {
-    cursor: pointer;
 }
