Inicio do desenvolvimento da tela ConfigurationMenu

--- a/src/components/MenuItem/MenuItem.module.css
+++ b/src/components/MenuItem/MenuItem.module.css
@@ -9,6 +9,7 @@
     border-bottom: 1px solid var(--white);
     padding: 16px;
     border-right: 0.5px solid var(--branco);
+    cursor: pointer;
 }
 .icon{
     width: 25px;
