--- a/src/components/MeasumentTextInput/measurementTextInput.module.css
+++ b/src/components/MeasumentTextInput/measurementTextInput.module.css
@@ -23,7 +23,7 @@
 }
 .measurementInput span{
     display: flex;
-    width: 262px;
+    width: 100%;
     flex-direction: row;
     gap: 8px;
     align-items: end;
