--- a/src/pages/configuracoes-de-acesso/cadastro.module.css
+++ b/src/pages/configuracoes-de-acesso/cadastro.module.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
-
 .header{
     width: 100%;
     height: 50px;
@@ -12,11 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-}
-
-.h1{
-    font-family: 'DM Sans', sans-serif;;
-    font-size: 24px;
+    padding: 16px;
 }
 
 .divAdministrador{
