--- a/src/components/ProductItem/productItem.module.css
+++ b/src/components/ProductItem/productItem.module.css
@@ -1,7 +1,7 @@
 .itemCard {
     display: flex;              
-    /* background-color: #ffc107; */
-    border: 2px solid var(--white);
+    background-color: var(--gunmetal);
+    border: 1px solid var(--white);
     height: 75px;
     width: 360px;
     border-radius: 8px;
@@ -19,7 +19,7 @@
 
  .text1{
     font-size: 1em;
-    font-weight: 200px;
+    font-weight: bold;
  }
 
  .text2{
@@ -32,7 +32,7 @@
   justify-content: center;
   /* background-color: #dc3545; */
   height: 100%;
-  width: 23%;
+  width: 24%;
 }
   .image{
     border-radius: 8px;
@@ -60,7 +60,8 @@
   .checked {
     /* background-color: #ffc107; */
     border-color: var(--white);
-    background-color: var(--carvao);
+    background-color: var(--gunmetal);
+    box-shadow: var(--sombra-in-clara);
   }
   .divCheckbox{
     display: flex;
