--- a/src/pages/configuracoes-de-acesso/cadastro.module.css
+++ b/src/pages/configuracoes-de-acesso/cadastro.module.css
@@ -38,8 +38,10 @@ input[type="file"] {
 }
 
 .divButton{
-    display: flex;
-    flex-direction: column;
     width: 100%;
+    height: 113px;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    border-top: var(--borda-branca);
 }
