17 - Revisão do Toast.

--- a/src/components/Toast/toast.module.css
+++ b/src/components/Toast/toast.module.css
@@ -1,10 +1,5 @@
-.Toast,
-.ToastErro,
-.ToastSuccess,
-.ToastAlert {
-    background-color: var(--green);
-    height: auto;
-    width: 330px;
+.success, .alert, .error {
+    border: var(--borda-fina-branca);
     border-radius: 10px;
     flex-direction: row;
     display: flex;
@@ -14,32 +9,11 @@
     font-size: 1.3em;
 }
 
-.Toast span,
-.ToastSuccess span,
-.ToastAlert span {
-    color: var(--gunmetal) !important;
+.success > span, .alert > span {
+    color: var(--gunmetal);
 }
 
-.icon path {
-    width: 30px;
-    height: 30px;
-    color: var(--gunmetal) !important;
-}
-
-.ToastAlert {
-    background-color: var(--yellow);
-}
-
-.ToastErro {
-    background-color: var(--orange);
-}
-
-.ToastErro span {
-    color: var(--white) !important;
-}
-
-.ToastErro .icon path {
-    width: 30px;
-    height: 30px;
-    color: var(--white) !important;
-}
+.success{background-color: var(--toast-verde);}
+.alert {background-color: var(--toast-amarelo);}
+.error {background-color: var(--toast-vermelho);}
+.error > span {color: var(--white);}
