--- a/src/globals.css
+++ b/src/globals.css
@@ -21,18 +21,17 @@ alterando-o apenas aqui, assim como com as variáveis do Figma!!!
     --carvao: #254A5B;
     --cinza-transparente: #C9C9C9;
     --vermelho: #CC334E;
-    /* NAO USAR A PARTIR DAQUI */
-    --azul-claro: #65B5DA;
-    --green:#2DD36F;
-    --yellow: #FFCA3A;
-    --orange:#EE6123;
-    /* FIM DO NAO USAR */
     --gradiente: linear-gradient(
         to right,
         var(--gunmetal),
         var(--carvao),
         var(--gunmetal)
     );
+
+    /* Cores dos Toasts */
+    --toast-verde:#2DD36F;
+    --toast-amarelo: #FFCA3A;
+    --toast-vermelho:#EE6123;
 
     /* Estilos de glassmorphism */
     --cor-vidro: #FFFFFF33;
@@ -47,6 +46,7 @@ alterando-o apenas aqui, assim como com as variáveis do Figma!!!
 
     /*  Sombras */
     /* IN = Interna; EX = Com espaçamento adicional, para acomodar bordas*/
+    --azul-claro: #65B5DA; /*Cor de apoio para a sombra interna clara*/
     --sombra-branca: 3px 3px 1px 2px var(--white);
     --sombra-vermelha: 0 0 5px var(--vermelho);
     --sombra-in-escura: 0 0 15px 3px var(--preto) inset;
