Adicionando yellow no globals

--- a/src/globals.css
+++ b/src/globals.css
@@ -20,6 +20,7 @@ alterando-o apenas aqui, assim como com as variáveis do Figma!!!
     --gunmetal: #22333B;
     --carvao: #254A5B;
     --cinza-transparente: #C9C9C9;
+    --yellow: #FFCA3A;
     --vermelho: #CC334E;
     --gradiente: linear-gradient(
         to right,
