17 - Instância no Debug + primeiras correções.

--- a/src/components/ListItem/ListItem.module.css
+++ b/src/components/ListItem/ListItem.module.css
@@ -7,36 +7,28 @@
     justify-content: flex-start;
     align-items: center;
     padding: 16px;
-    border: 1px solid var(--white);
+    border: var(--borda-branca);
     border-radius: 4px;
+    gap: 8px;
 }
 
-.img {
+.itemList img {
     width: 65px;
     height: 65px;
     border-radius: 100%;
     border: 1px solid var(--white);
 }
-
-.text {
+.itemList div {
     margin: 0;
     padding: 0;
     display: flex;
     line-height: 1;
 }
 
-.title {
-    font-size: 36px;
+.itemList h4 {
+    font-size: 1em;
+    font-weight: 500;
 }
-
-.desc {
+.itemList h5 {
     font-size: 16px;
-}
-
-.text {
-    font-size: 23px;
-}
-.icon{
-    height: 35px;
-    width: 35px;
 }
