Tela CategoriaProduto - Iniciada

--- a/src/components/IconInput/iconInput.module.css
+++ b/src/components/IconInput/iconInput.module.css
@@ -13,7 +13,7 @@
 
 .textInput > div{
     height: 47px;
-    width: 262px;
+    width: 100%;
     padding: 8px;
     background: var(--gunmetal);
     border: var(--borda-branca);
