--- a/src/globals.css
+++ b/src/globals.css
@@ -72,7 +72,7 @@ body{
     width: 375px;
     outline: 2px solid white;
     background: var(--gradiente);
-    gap: 24px;
+    /* gap: 24px; */
     display: flex;
     flex-direction: column;
     align-items: center;
